--- a/app/src/main/res/layout/dialog_edit_or_add_video.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_video.xml
@@ -55,12 +55,30 @@
                 app:srcCompat="@drawable/ic_translate"
                 tools:visibility="visible" />
 
-            <ImageView
-                android:id="@+id/dialog_editOrAddVideo_thumbnail"
-                style="@style/ImageButtonStyle"
+            <FrameLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_photo" />
+                android:layout_height="wrap_content">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+
+                <ImageView
+                    android:id="@+id/dialog_editOrAddVideo_thumbnail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="3dp"
+                    app:srcCompat="@drawable/ic_photo" />
+
+                <ImageView
+                    android:id="@+id/dialog_editOrAddVideo_thumbnail_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    style="@style/ImageButtonStyle"
+                    android:padding="0dp"
+                    android:orientation="horizontal" />
+            </FrameLayout>
         </LinearLayout>
 
         <LinearLayout
