--- a/app/src/main/res/layout/dialog_edit_thumbnail.xml
+++ b/app/src/main/res/layout/dialog_edit_thumbnail.xml
@@ -48,6 +48,34 @@
         android:layout_height="1dp"
         android:background="?android:attr/listDivider" />
 
+    <LinearLayout
+        android:id="@+id/dialog_editThumbnail_select_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/dialog_editThumbnail_select_previous"
+            style="@style/ImageButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_arrow_left" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <ImageView
+            android:id="@+id/dialog_editThumbnail_select_next"
+            style="@style/ImageButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_arrow_right" />
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/dialog_editThumbnail_image"
         android:layout_width="match_parent"
