--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorDivider">#858585</color>
     <color name="colorTileBackground">#1A1A1A</color>
     <color name="colorText_hover">#8C8C8C</color>
-    <color name="colorDayNightContent">#B3B3B3</color>
+    <color name="colorDayNightContent">#C7C7C7</color>
     <color name="colorBackground">#303030</color>
     <color name="colorBackgroundLight">#424242</color>
     <color name="colorMenuText">#FFFFFF</color>
