--- a/app/src/main/res/layout/popup_standard_list.xml
+++ b/app/src/main/res/layout/popup_standard_list.xml
@@ -13,6 +13,15 @@
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
+    <ImageView
+        android:id="@+id/popup_standardList_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="13dp"
+        android:visibility="gone"
+        tools:visibility="visible"
+        tools:srcCompat="@drawable/ic_info" />
+
     <TextView
         android:id="@+id/popup_standardList_text"
         android:layout_width="0dp"
