--- a/app/src/main/res/layout/main_fragment_media.xml
+++ b/app/src/main/res/layout/main_fragment_media.xml
@@ -34,7 +34,7 @@
                     android:elevation="3dp"
                     android:foreground="@drawable/ripple"
                     android:gravity="center"
-                    android:onClick="openVideoActivity"
+                    android:onClick="openMediaActivity"
                     android:orientation="vertical">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -76,7 +76,7 @@
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/main_videoCount"
+                                android:id="@+id/main_media_count"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="–" />
@@ -135,7 +135,7 @@
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/main_darstellerCount"
+                                android:id="@+id/main_media_personCount"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="–" />
