--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -52,6 +52,20 @@
                 app:popupTheme="@style/TitleTextStyle"
                 app:title="Medien" />
 
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/media_selectionToolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="49dp"
+                android:visibility="gone"
+                app:layout_collapseMode="pin"
+                app:menu="@menu/task_bar_joke"
+                app:navigationIcon="@drawable/ic_arrow_back_white"
+                app:popupTheme="@style/TitleTextStyle"
+                app:title="Ausgewählt (5)"
+                tools:visibility="gone" />
+
 
             <LinearLayout
                 android:id="@+id/search_layout"
