--- a/app/src/main/res/menu/task_bar_media.xml
+++ b/app/src/main/res/menu/task_bar_media.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <item
         android:id="@+id/taskBar_media_add"
         android:icon="@drawable/ic_add"
         android:title="Hinzufügen"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/taskBar_media_edit"
+        android:icon="@drawable/ic_edit"
+        android:iconTint="#FFFFFF"
+        android:title="Bearbeiten"
+        android:visible="false"
+        tools:visible="true"
         app:showAsAction="always" />
 </menu>
