--- a/app/src/main/res/layout/dialog_edit_item.xml
+++ b/app/src/main/res/layout/dialog_edit_item.xml
@@ -62,10 +62,17 @@
             android:layout_height="1dp"
             android:background="@color/colorDivider" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/dialogEditCategory_selectCategories"
+        <LinearLayout
+            android:id="@+id/dialogEditCategory_selectLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/dialogEditCategory_selectCategories"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
