--- a/app/src/main/res/layout/list_item_image.xml
+++ b/app/src/main/res/layout/list_item_image.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/listItem_image_imgaeView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_margin="3dp"
         android:adjustViewBounds="true"
         tools:srcCompat="@drawable/simpsons_movie_poster" />
