--- a/app/src/main/res/layout/list_item_image.xml
+++ b/app/src/main/res/layout/list_item_image.xml
@@ -14,15 +14,16 @@
         tools:srcCompat="@drawable/simpsons_movie_poster" />
 
 
-        <ImageView
-            android:id="@+id/listItem_image_videoIndicator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginBottom="5dp"
-            app:srcCompat="@drawable/ic_play_arrow"
-            android:layout_gravity="bottom|start"
-            android:background="@drawable/grey_rounded_corners"/>
+    <ImageView
+        android:id="@+id/listItem_image_videoIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_marginStart="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/grey_rounded_corners"
+        android:backgroundTint="#8C4A4A4A"
+        app:srcCompat="@drawable/ic_play_arrow" />
 
     <ImageView
         android:id="@+id/listItem_image_selected"
@@ -31,7 +32,7 @@
         android:layout_gravity="top|end"
         android:layout_margin="5dp"
         android:background="@drawable/grey_rounded_corners"
-        android:backgroundTint="#E91E63"
+        android:backgroundTint="#8CE81E61"
         android:visibility="gone"
         app:srcCompat="@drawable/ic_check"
         tools:visibility="visible" />
